# servsim

./: CMakeLists.txt  README.md
client/data/shader/: main.frag  main.vert
client/src/: main.mm  renderer.cpp  renderer.h
common/include/common/: vec2.h  vec3.h  vec4.h
common/src/: mat4.cpp  vec2.cpp  vec3.cpp  world.cpp
data/Debug/: Servsim
data/shader/: main.frag  main.vert
src/client/: main.mm  renderer.cpp  renderer.h
src/common/: input.h  mat4.cpp  mat4.h  vec3.cpp  vec3.h  world.cpp  world.h
